# rp2350-poe2-dual-gamepad

./: CMakeLists.txt  README.md  main.c  pico_sdk_import.cmake  tusb_config.h  usb_descriptors.c  ws2812.pio
.github/workflows/: build-uf2.yml
